[metadata]
name = cognixcore
version = v0.9
author = HCI Lab Ece Patras
# author_email = l.thomm@mailbox.org
description = Python backend for node editor-like graph-based processing for various workflows.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/HeftyCoder/ryvencore/tree/cognix
project_urls =
    Website = https://cognix.gr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    packaging
    beartype
    # these should be optional
    fastapi
    fastapi-offline
    traits
    traitsui

# [options.entry_points]
# console_scripts = (None)
